fix: tiny CSS tweak added as workaround to address Safari list wrapping quirk

--- a/packages/components/bolt-list/src/list.scss
+++ b/packages/components/bolt-list/src/list.scss
@@ -80,7 +80,9 @@
     // The inline here is talking about the items inside, the List component itself is still a block level element that would fill up the space of any container.
     &.c-bolt-list--display-inline,
     &.c-bolt-list--display-flex {
-      width: calc(100% + #{bolt-spacing($spacing-value-name)}); // Width must be defined in order for the list to dislay correctly in Firefox.
+      // Width must be defined in order for the list to display correctly in Firefox.
+      // Extra 1px added as workaround to Safari wrapping issue in BDS-2087
+      width: calc(100% + #{bolt-spacing($spacing-value-name)} + 1px);
     }
 
     @each $breakpoint in $bolt-breakpoints {
@@ -89,7 +91,9 @@
       // The inline here is talking about the items inside, the List component itself is still a block level element that would fill up the space of any container.
       &.c-bolt-list--display-inline\@#{$breakpoint-name} {
         @include bolt-mq($breakpoint-name) {
-          width: calc(100% + #{bolt-spacing($spacing-value-name)}); // Width must be defined in order for the list to dislay correctly in Firefox.
+          // Width must be defined in order for the list to display correctly in Firefox.
+          // Extra 1px added as workaround to Safari wrapping issue in BDS-2087
+          width: calc(100% + #{bolt-spacing($spacing-value-name)} + 1px);
         }
       }
     }
